# sqlx_executor_trait

./: Cargo.toml
src/: db.rs  main.rs
